phase3/k8s/elk-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-stack
  labels:
    name: elastic-stack
    app: elk-stack
